<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical" tools:ignore="MissingConstraints">

        <TextView android:id="@+id/version"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/version"
                  android:textSize="24dp"
                  android:textStyle="bold"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disclaimer"
                  android:textSize="24dp"/>

        <Button android:id="@+id/saveCert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveCert"/>
        <Button android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/github"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="GitHUB" tools:ignore="ButtonStyle">
            </Button>
            <Button
                    android:id="@+id/donate"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/donate" tools:ignore="ButtonStyle">
            </Button>
        </LinearLayout>

        <Button android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_settings"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/start"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start" tools:ignore="ButtonStyle">
            </Button>
            <Button
                    android:id="@+id/clear"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clearLog" tools:ignore="ButtonStyle">
            </Button>
        </LinearLayout>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/log"
                  android:textSize="24dp"/>

        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp">
            <ScrollView
                    android:id="@+id/logScroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" tools:ignore="MissingConstraints">
                <TextView
                        android:id="@+id/log"
                        android:textIsSelectable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </ScrollView>
        </HorizontalScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>